# stake-deposit-interceptor

./: .gitignore  .solitarc.js  Cargo.toml  Makefile  README.md  codama-pod-primitives-visitor.cjs  codama.json  compose.yaml  cranker-bot-quick-start.md  cranker.Dockerfile  docker-compose.yaml  generate-sdk.js  package-lock.json  package.json  rust-toolchain.toml  shank.cjs
.github/workflows/: build-container-images.yml  build.yml  npm-publish.yml  package.yaml
api/: Cargo.toml
api/src/: error.rs  utils.rs
api/src/router/: get_deposit_stake_instructions.rs
cli/: Cargo.toml  README.md
cli/scripts/: intercepted-deposit-stake.sh  setup-deposit-authority.sh  setup-local-validator.sh
cli/src/: cli_args.rs  client.rs  interceptor.rs  interceptor_handler.rs  main.rs  output.rs
clients/rust/stake-deposit-interceptor/: Cargo.toml
clients/rust/whitelist-management/: Cargo.toml
core/: Cargo.toml
core/src/: discriminators.rs  lib.rs  whitelist.rs
cranker/: .env.example  Cargo.toml  Dockerfile  README.md
cranker/src/: lib.rs  main.rs  metrics.rs
package/: README.md  package.json  rollup.config.mjs  tsconfig.json
package/idl/: stake_deposit_interceptor.json
package/src/: index.ts
program/: Cargo.toml
program/idl/: stake_deposit_interceptor.json
program/src/: error.rs  instruction.rs  processor.rs  state.rs
program/tests/: claim_pool_tokens.rs  deposit_stake.rs  init_deposit_stake_authority.rs  update_deposit_stake_authority.rs
program/tests/helpers/: misc.rs  stake_deposit_interceptor.rs  sysvar.rs
src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  macros.rs  processor.rs  state.rs
stake_deposit_interceptor/: Cargo.toml  build.rs
stake_deposit_interceptor/idl/: stake_deposit_interceptor.json
stake_deposit_interceptor/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  macros.rs  processor.rs  state.rs
stake_deposit_interceptor/src/state/: hopper.rs
stake_deposit_interceptor/tests/: claim_pool_tokens.rs  deposit_stake.rs  deposit_stake_whitelisted.rs  init_deposit_stake_authority.rs  update_deposit_stake_authority.rs  update_owner.rs  withdraw_from_hopper.rs  withdraw_stake_whitelisted.rs
stake_deposit_interceptor/tests/helpers/: misc.rs  mod.rs  spl.rs  stake_client.rs  stake_deposit_interceptor.rs  stake_deposit_interceptor_client.rs  stake_pool.rs  system.rs  sysvar.rs  vote.rs  whitelist_management_client.rs
tests/: claim_pool_tokens.rs  deposit_stake.rs  init.rs  init_deposit_stake_authority.rs  init_fee_params.rs  update_deposit_stake_authority.rs  update_owner.rs
tests/helpers/: misc.rs  mod.rs  spl.rs  stake_deposit_interceptor.rs  stake_pool.rs  system.rs  vote.rs
