[package]
name = "stake-deposit-interceptor-cli"
description = "stake deposit interceptor CLI"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5.3"
clap = "2.33.3"
serde = "1.0.215"
serde_derive = "1.0.130"
serde_json = "1.0.133"
solana-account-decoder = "2.1.0"
solana-clap-utils = "2.1.0"
solana-cli-config = "2.1.0"
solana-cli-output = "2.1.0"
solana-client = "2.1.0"
solana-logger = "2.1.0"
solana-program = "2.1.0"
solana-remote-wallet = "2.1.0"
solana-sdk = "2.1.0"
spl-associated-token-account = { version = "=6.0.0", git = "https://github.com/solana-labs/solana-program-library", rev = "2479c1ee073bc3b5069b5be362b26f751a01311f", features = ["no-entrypoint"] }
spl-associated-token-account-client = { version = "=2.0.0", git = "https://github.com/solana-labs/solana-program-library", rev = "2479c1ee073bc3b5069b5be362b26f751a01311f" }
spl-stake-pool = { version = "=2.0.0", git = "https://github.com/solana-labs/solana-program-library", rev = "2479c1ee073bc3b5069b5be362b26f751a01311f", features = ["no-entrypoint"] }
spl-token = { version = "=7.0", git = "https://github.com/solana-labs/solana-program-library", rev = "2479c1ee073bc3b5069b5be362b26f751a01311f", features = ["no-entrypoint"] }
bs58 = "0.5.1"
bincode = "1.3.1"

[[bin]]
name = "spl-stake-pool-interceptor"
path = "src/main.rs"
