[package]
name = "stake-deposit-interceptor-cli"
description = "stake deposit interceptor CLI"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stake-deposit-interceptor-cli"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
bincode = "1.3.1"
borsh.workspace = true
bs58 = "0.4.0"
clap = "2.33.3"
jito-bytemuck.workspace = true
serde = "1.0.203"
serde_derive = "1.0.130"
serde_json = "1.0.117"
solana-account-decoder.workspace = true
solana-clap-utils = ">=1.18.11,<=2"
solana-cli-config = ">=1.18.11,<=2"
solana-cli-output = ">=1.18.11,<=2"
solana-client.workspace = true
solana-logger = ">=1.18.11,<=2"
solana-program.workspace = true
solana-remote-wallet = ">=1.18.11,<=2"
solana-stake-interface.workspace = true
solana-sdk.workspace = true
spl-associated-token-account-interface.workspace = true
spl-governance = { git = "https://github.com/solana-labs/solana-program-library", rev = "d85ea9ff0573cd82c9245965a55f379b4dc263bc", features = ["no-entrypoint"] }
spl-stake-pool.workspace = true
spl-token-interface.workspace = true
# Added deps from fork
stake-deposit-interceptor = { version = "0.1.0", path = "../stake_deposit_interceptor", features = ["no-entrypoint"] }
