[package]
name = "stake-deposit-interceptor-cranker"
version = "0.1.0"
edition = "2021"

[dependencies]
# Solana dependencies
solana-sdk = "2.0.14"
solana-client = "2.0.14"
solana-program = "2.0.14"
solana-account-decoder = "2.0.14"

# Local dependency
stake-deposit-interceptor = { path = "../program" }

# SPL dependencies - match program versions
spl-stake-pool = { version = "2.0.0", features = ["no-entrypoint"] }
spl-token = "6.0.0"
spl-associated-token-account = { version = "5.0.1", features = ["no-entrypoint"] }

# Jito dependency
jito-bytemuck = { git = "https://github.com/jito-foundation/restaking.git", rev = "4c37d76102496edd784bb25436cb9c4340f0df01" }
bytemuck = { version = "1.13", features = ["derive"] }  # Add this line

# Utility dependencies
tokio = { version = "1.41.0", features = ["full"] }
thiserror = "1.0.65"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }  # Add env-filter feature
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
config = "0.13"
metrics = "0.21"
dotenv = "0.15"

[dev-dependencies]
solana-program-test = "2.0.14"