[package]
name = "stake-deposit-interceptor-cranker"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { workspace = true }
bytemuck = { version = "1.13", features = ["derive"] }  # Add this line
clap = { version = "4.4", features = ["derive"] }
config = "0.13"
dotenv = "0.15"
jito-bytemuck = { git = "https://github.com/jito-foundation/restaking.git", rev = "4c37d76102496edd784bb25436cb9c4340f0df01" }
log = "0.4.22"
metrics = "0.21"
serde = { version = "1.0", features = ["derive"] }
solana-account-decoder = "2.0.14"
solana-client = "2.0.14"
solana-metrics = "2.0.14"
solana-program = "2.0.14"
solana-sdk = "2.0.14"
spl-associated-token-account = { version = "5.0.1", features = ["no-entrypoint"] }
spl-stake-pool = { version = "2.0.0", features = ["no-entrypoint"] }
spl-token = "6.0.0"
stake-deposit-interceptor = { path = "../stake_deposit_interceptor" }
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }  # Add env-filter feature
