[package]
name = "stake-deposit-interceptor"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []
idl = []

[dependencies]
borsh = "1.5.1"
bytemuck = "1.19.0"
jito-bytemuck = { workspace = true }
num-derive = "0.4.2"
num-traits = "0.2.19"
shank = "0.3.0"
solana-program = "2.0.14"
spl-associated-token-account = { version = "5.0.1", features = ["no-entrypoint"] }
spl-pod = { version = "0.4.0", features = ["borsh"] }
spl-program-error = "0.5.0"
spl-program-error-derive = "0.4.1"
spl-stake-pool = { workspace = true }
spl-token = { workspace = true }
spl-token-2022 = { workspace = true }
thiserror = "1.0.65"

[dev-dependencies]
solana-program-test = "2.0.14"
solana-sdk = { workspace = true }
solana-vote-program = "2.0.14"
tokio = "1.41.0"

[lib]
crate-type = ["cdylib", "lib"]
